--- a/package.json
+++ b/package.json
@@ -1,58 +1,30 @@
 {
-  "name": "rayriffy-front-next-chapter-2",
-  "version": "1.0.0",
-  "main": "index.js",
-  "repository": "https://github.com/rayriffy/rayriffy-front-next-chapter-2",
-  "author": "Phumrapee Limpianchop <contact@rayriffy.com>",
-  "license": "MIT",
+  "name": "vue-tailwind-purge",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "parcel src/index.html",
-    "build": "parcel build src/index.html"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build"
+  },
+  "dependencies": {
+    "core-js": "^3.6.5",
+    "register-service-worker": "^1.7.1",
+    "vue": "^2.6.11",
+    "vue-fragment": "^1.5.1"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^2.3.0",
-    "@vue/component-compiler-utils": "^3.1.2",
+    "@vue/cli-plugin-babel": "~4.4.0",
+    "@vue/cli-plugin-pwa": "~4.4.0",
+    "@vue/cli-plugin-typescript": "~4.4.0",
+    "@vue/cli-service": "~4.4.0",
     "cssnano": "^4.1.10",
     "cssnano-preset-advanced": "^4.0.7",
-    "parcel-bundler": "^1.12.4",
-    "parcel-plugin-pwa-manifest": "^3.0.7",
-    "parcel-plugin-sw-cache": "^0.3.1",
-    "postcss-modules": "^2.0.0",
+    "purgecss": "^2.3.0",
     "tailwindcss": "^1.4.6",
     "tailwindcss-aspect-ratio": "^3.0.0",
     "tailwindcss-responsive-embed": "^1.0.0",
-    "typescript": "^3.9.5",
+    "typescript": "~3.9.3",
     "vue-template-compiler": "^2.6.11"
-  },
-  "pwaManifest": {
-    "name": "rayriffy.com",
-    "shortName": "rayriffy.com",
-    "startURL": "./",
-    "theme": "#1a202c",
-    "generateIconOptions": {
-      "baseIcon": "./src/assets/favicon.png",
-      "sizes": [
-        192,
-        384,
-        512
-      ],
-      "display": "standalone",
-      "purpose": [
-        "any",
-        "maskable"
-      ],
-      "genFavicons": true
-    }
-  },
-  "cache": {
-    "disablePlugin": false,
-    "inDev": false,
-    "strategy": "default"
-  },
-  "dependencies": {
-    "vue": "^2.6.11",
-    "vue-fragment": "^1.5.1",
-    "vue-hot-reload-api": "^2.3.4"
   }
 }
