--- a/package.json
+++ b/package.json
@@ -13,16 +13,15 @@
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^2.3.0",
+    "@tailwindcss/aspect-ratio": "^0.2.0",
     "cssnano": "^4.1.10",
     "cssnano-preset-advanced": "^4.0.7",
     "parcel-bundler": "^1.12.4",
     "parcel-plugin-pwa-manifest": "^3.0.7",
     "parcel-plugin-sw-cache": "^0.3.1",
-    "postcss-modules": "^2.0.0",
-    "tailwindcss": "^1.4.6",
-    "tailwindcss-aspect-ratio": "^3.0.0",
-    "tailwindcss-responsive-embed": "^1.0.0",
-    "typescript": "^3.9.5"
+    "postcss-modules": "^4.0.0",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
+    "typescript": "^4.1.3"
   },
   "pwaManifest": {
     "name": "rayriffy.com",
@@ -48,6 +47,5 @@
     "disablePlugin": false,
     "inDev": false,
     "strategy": "default"
-  },
-  "dependencies": {}
+  }
 }
