--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "react-ssr-prepass": "npm:preact-ssr-prepass",
     "swr": "^0.4.0",
     "tailwindcss": "^2.1.4",
-    "typescript": "^4.3.2"
+    "typescript": "^4.3.2",
+    "webpack": "^5.39.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
