--- a/package.json
+++ b/package.json
@@ -26,35 +26,34 @@
     ]
   },
   "dependencies": {
-    "@headlessui/react": "^1.2.0",
-    "@heroicons/react": "^1.0.1",
-    "@next/bundle-analyzer": "^10.0.5",
-    "@tailwindcss/aspect-ratio": "^0.2.1",
-    "@tailwindcss/forms": "^0.3.3",
-    "@tailwindcss/typography": "^0.4.1",
-    "dayjs": "^1.10.3",
-    "next": "^11.0.0",
+    "@headlessui/react": "^1.5.0",
+    "@heroicons/react": "^1.0.6",
+    "@next/bundle-analyzer": "^12.1.0",
+    "@tailwindcss/aspect-ratio": "^0.4.0",
+    "@tailwindcss/forms": "^0.5.0",
+    "@tailwindcss/typography": "^0.5.2",
+    "axios": "^0.26.1",
+    "dayjs": "^1.11.0",
+    "next": "^12.1.0",
     "next-compose-plugins": "^2.2.1",
-    "next-offline": "^5.0.5",
     "next-plugin-preact": "^3.0.6",
-    "postcss": "^8.3.4",
-    "preact": "^10.5.13",
-    "preact-render-to-string": "^5.1.19",
+    "postcss": "^8.4.12",
+    "preact": "^10.6.6",
+    "preact-render-to-string": "^5.1.20",
     "react": "npm:@preact/compat",
     "react-dom": "npm:@preact/compat",
     "react-ssr-prepass": "npm:preact-ssr-prepass",
-    "swr": "^0.4.0",
-    "tailwindcss": "^2.1.4",
-    "typescript": "^4.3.2",
-    "webpack": "^5.39.0"
+    "tailwindcss": "^3.0.23",
+    "typescript": "^4.6.2",
+    "webpack": "^5.70.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^11.0.0",
-    "@commitlint/config-conventional": "^11.0.0",
-    "@types/node": "^14.14.21",
-    "@types/react": "^17.0.0",
-    "husky": "^4.3.7",
-    "lint-staged": "^10.5.3",
-    "prettier": "^2.2.1"
+    "@commitlint/cli": "^16.2.3",
+    "@commitlint/config-conventional": "^16.2.1",
+    "@types/node": "^17.0.21",
+    "@types/react": "^17.0.40",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.3.7",
+    "prettier": "^2.6.0"
   }
 }
