--- a/package.json
+++ b/package.json
@@ -7,17 +7,12 @@
   "license": "MIT",
   "private": true,
   "scripts": {
+    "prepare": "husky install",
     "build": "next build",
     "dev": "yarn --silent dev:debugger",
     "dev:normal": "next",
     "dev:debugger": "NODE_OPTIONS='--inspect' next dev",
     "start": "next start"
-  },
-  "husky": {
-    "hooks": {
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-      "pre-commit": "lint-staged"
-    }
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
